[package]
name = "zap"
version = "0.0.0"
edition = "2018"
authors = ["kprotty"]

[dependencies]
libc = "0.2"
num_cpus = "1"
mio = { version = "0.7", features = ["net", "os-poll"] }
tokio = { version = "1" }

[dev-dependencies]
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[[example]]
name = "zap_http"

[[example]]
name = "tokio_http"