[package]
name = "benches"
version = "0.0.0"
edition = "2018"
authors = ["kprotty"]

[dependencies]
tokio = { version = "0.3", features = ["rt", "rt-multi-thread", "sync", "macros"] }
futures-intrusive = { version = "0.3" }
async-mutex = { version = "1.4" }

[[bin]]
name = "spawn"
path = "./spawn.rs"

[[bin]]
name = "yield"
path = "./yield.rs"

[[bin]]
name = "pong"
path = "./pong.rs"

[[bin]]
name = "lock"
path = "./lock.rs"