[package]
name = "zap"
version = "0.0.0"
edition = "2021"
authors = ["kprotty"]

[[example]]
name = "qsort"
path = "examples/tokio_qsort.rs"

[[example]]
name = "rsort"
path = "examples/rayon_qsort.rs"

[[example]]
name = "zsort"
path = "examples/zap_qsort.rs"

[dependencies]
num_cpus = "1"

[dev-dependencies]
rayon = "1.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
