cargo-features = ["edition2021"]

[package]
name = "bench"
version = "0.0.0"
edition = "2021"
authors = ["kprotty"]

[[bin]]
name = "qsort"
path = "qsort.rs"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "sync", "macros"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
